*** empty log message ***

--- a/TinyRadius/TODO
+++ b/TinyRadius/TODO
@@ -3,3 +3,8 @@
    replace some IOExceptions
    
 - include vendor ID numbers as string constants in dictionary file
+
+- "Include" directive for dictionary file
+
+- transparent Vendor-Specific attribute handling
+  (as implemented by FreeRadius)
