--- a/TinyRadius/CHANGES
+++ b/TinyRadius/CHANGES
@@ -1,6 +1,10 @@
 TinyRadius Change Log
 
-0.9.1: added commons-logging.jar and varous log messages to
+0.9.2: enhanced RadiusServer to include the client address
+       in the callback methods accessRequestReceived() and
+       accountingRequestReceived()
+
+0.9.1: added commons-logging.jar and various log messages to
        the classes RadiusServer/RadiusClient
        
 0.9:   initial release
