--- a/TinyRadius/CHANGES
+++ b/TinyRadius/CHANGES
@@ -1,5 +1,11 @@
 TinyRadius Change Log
 
+0.9.3: fixed a bug concerning sub attributes of sub-type 26
+       of a Vendor-Specific attributes
+       structural enhancements for Vendor-Specific attributes
+       fixed a NullPointerException occuring for sub attributes not
+       in the attribute dictionary
+
 0.9.2: enhanced RadiusServer to include the client address
        in the callback methods accessRequestReceived() and
        accountingRequestReceived()
