--- a/TinyRadius/TODO
+++ b/TinyRadius/TODO
@@ -2,6 +2,8 @@
 
 - "Include" directive for dictionary file
 
+- improve dictionary parsing
+
 - transparent Vendor-Specific attribute handling
   (as implemented by FreeRadius)
   
