--- a/TinyRadius/CHANGES
+++ b/TinyRadius/CHANGES
@@ -1,7 +1,10 @@
 TinyRadius Change Log
 
 Plans for 0.9.6: Asynchronous Radius client (see TODO)
-Plans for 0.9.5: Proxy support (thanks to glanz)
+Plans for 0.9.5: Proxy support (thanks to glanzel)
+
+0.9.5:
+- further Radius packet type codes (COA, Disconnect)
 
 0.9.4:
 - greatly improved dictionary support: new package
