*** empty log message ***

--- a/TinyRadius/CHANGES
+++ b/TinyRadius/CHANGES
@@ -2,6 +2,9 @@ TinyRadius Change Log
 
 Plans for 1.0: Asynchronous Radius client (see TODO)
 
+0.9.9:
+- small bug fix in MemoryDictionary
+
 0.9.8:
 - small bug fix in attribute class
 
