*** empty log message ***

--- a/TinyRadius/CHANGES
+++ b/TinyRadius/CHANGES
@@ -4,6 +4,7 @@ Plans for 1.0: Asynchronous Radius client (see TODO)
 
 0.9.9:
 - small bug fix in MemoryDictionary
+- switch to Maven2
 
 0.9.8:
 - small bug fix in attribute class
